# egrav-ICCUB

./: .gitignore  README.md  demo.ipynb  environment.yml  pyproject.toml
nr_iccub/nr_post/: gw_math.py
nr_iccub/reader/: H5ICCUB.py  H5Reader.py  JsonICCUB.py
nr_iccub/sim/: NRsim.py  NRsim_from_ICCUB.py
sample_data/ICCUB-0001/: 0001_metadata.json  0001_parameter_file.par  0001_wf.h5
sample_data/ICCUB-0002/: 0002_metadata.json  0002_parameter_file.par  0002_wf.h5
