[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nr_iccub"
version = "0.1.0"
description = "A simple example Python package"
authors = [
    { name = "Your Name", email = "you@example.com" }
]

readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["nr_iccub"]
    
[project.urls]
#homepage = "https://example.com"
repository = "https://github.com/tandradew/NR-Catalog-ICCUB"